# CodeGrid-App

./: .env.example  .gitignore  CHANGELOG.md  KEYFORGE_DESKTOP_INTEGRATION.md  LICENSE  MARKETING_STRATEGY.md  NOTARIZATION.md  README.md  appdmg.json  index.html  package-lock.json  package.json  vite.config.ts  wb2.md
.github/workflows/: build.yml  release.yml
app/: globals.css  page.tsx  robots.ts
app/api/license/: route.ts
app/api/portal/: route.ts
app/api/webhook/: route.ts
app/download/: route.ts
app/pricing/: layout.tsx
app/privacy/: page.tsx
docs/: SPEECH-TO-TEXT.md
icons/: dmg-background.html  icon.icns
landing/: next.config.ts  package.json
landing/app/: layout.tsx  page.tsx  sitemap.ts
landing/app/api/checkout/: route.ts
landing/app/download/: route.ts
landing/app/pricing/: page.tsx
landing/app/success/: layout.tsx  page.tsx
landing/app/terms/: page.tsx
landing/components/: brand-logo.tsx
landing/lib/: keyforge.ts  stripe.ts
landing/scripts/: generate-og.py
scripts/: gen_multi.py  gen_programmatic.py  gen_recraft_final.py  generate_logo.py  process_icons.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/candidates/: fal_icon.tmp  icon_recraft_flat_tmp
src-tauri/src/: commands.rs  db.rs  lib.rs  license.rs  main.rs  pty_manager.rs  rpc_server.rs  session.rs  workspace.rs  worktree.rs
src/components/: BrowserPane.tsx  Canvas.tsx  ClaudeMdEditor.tsx  CodeViewer.tsx  CommandPalette.tsx  DependencyGraph.tsx  DiffViewer.tsx  FileTree.tsx  GitManager.tsx  GitSetupWizard.tsx  Grid.tsx  HubBrowser.tsx  LicenseDialog.tsx  McpManager.tsx  MinimizedPaneBar.tsx  ModelSwitcher.tsx  NewSessionDialog.tsx  Pane.tsx  ProjectSearch.tsx  QuickActions.tsx  ResourceIndicator.tsx  ResourceWarningDialog.tsx  RunButton.tsx  Settings.tsx  Sidebar.tsx  SkillsPanel.tsx  StatusBar.tsx  StickyNote.tsx  Terminal.tsx  TerminalManager.tsx  ToastContainer.tsx  TopBar.tsx  TrialBanner.tsx
src/hooks/: useKeyboardNav.ts  usePty.ts  useTerminal.ts
src/lib/: browserPaneWebviewBounds.ts  canvasToWindow.ts  fileIcons.ts  ipc.ts  keybindings.ts  terminalActivity.ts  themes.ts  updater.ts  vibeMode.ts
src/stores/: appStore.ts  layoutStore.ts  licenseStore.ts  notesStore.ts  resourceStore.ts  sessionStore.ts  toastStore.ts  workspaceStore.ts
src/styles/: terminal.css
