[package]
name = "gridcode"
version = "0.1.0"
description = "Bloomberg Terminal for Claude Code"
authors = ["GridCode"]
edition = "2021"

[lib]
name = "gridcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
which = "7"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
