[package]
name = "codegrid"
version = "0.1.0"
description = "Code Grid — Terminal workspace manager"
authors = ["CodeGrid"]
edition = "2021"

[lib]
name = "codegrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.31", features = ["bundled"] }
which = "7"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
